--- a/plausible/flyio_deploy/clickhouse/fly.toml
+++ b/plausible/flyio_deploy/clickhouse/fly.toml
@@ -1,16 +1,31 @@
-app = "plausible-clickhouse"
+# fly.toml app configuration file generated for plausible-ce-clickhouse on 2024-08-12T16:17:13+01:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-kill_signal = "SIGINT"
-kill_timeout = 5
-processes = []
-services = []
-
-[env]
+app = 'plausible-ce-clickhouse'
+primary_region = 'mad'
+kill_signal = 'SIGINT'
+kill_timeout = '5s'
 
 [experimental]
-  allowed_public_ports = []
   auto_rollback = true
 
+[build]
+
 [[mounts]]
-  source = "plausible_clickhouse_data"
-  destination = "/var/lib/clickhouse"
+  source = 'plausible_clickhouse_data'
+  destination = '/var/lib/clickhouse'
+
+[http_service]
+  internal_port = 8080
+  force_https = true
+  auto_stop_machines = 'off'
+  auto_start_machines = true
+  min_machines_running = 1        # this is needed for the `plausible` app to work
+  processes = ['app']
+
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
