--- a/plausible/flyio_deploy/plausible/fly.toml
+++ b/plausible/flyio_deploy/plausible/fly.toml
@@ -1,43 +1,58 @@
-app = "plausible"
+# fly.toml app configuration file generated for plausible-ce-app on 2024-08-12T16:30:08+01:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-kill_signal = "SIGTERM"
-kill_timeout = 5
-processes = []
-
-[deploy]
-  release_command = "db migrate"
-
-[env]
-  CLICKHOUSE_DATABASE_URL="http://plausible-clickhouse.internal:8123/plausible_dev"
-  LISTEN_IP="::"
-  ECTO_IPV6=true
+app = 'plausible-ce-app'
+primary_region = 'mad'
+kill_signal = 'SIGTERM'
+kill_timeout = '5s'
 
 [experimental]
-  allowed_public_ports = []
   auto_rollback = true
 
-[[services]]
-  http_checks = []
+[build]
+
+[deploy]
+  release_command = 'db migrate'
+
+[env]
+  CLICKHOUSE_DATABASE_URL = 'http://plausible-ce-clickhouse.internal:8123/plausible_dev'
+  ECTO_IPV6 = 'true'
+  LISTEN_IP = '::'
+
+[http_service]
   internal_port = 8000
-  processes = ["app"]
-  protocol = "tcp"
-  script_checks = []
+  force_https = true
+  auto_stop_machines = 'stop'
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
+
+[[services]]
+  protocol = 'tcp'
+  internal_port = 8000
+  processes = ['app']
+
+  [[services.ports]]
+    port = 80
+    handlers = ['http']
+
+  [[services.ports]]
+    port = 443
+    handlers = ['tls', 'http']
 
   [services.concurrency]
+    type = 'connections'
     hard_limit = 25
     soft_limit = 20
-    type = "connections"
-
-  [[services.ports]]
-    handlers = ["http"]
-    port = 80
-
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
 
   [[services.tcp_checks]]
-    grace_period = "30s"
-    interval = "15s"
-    restart_limit = 0
-    timeout = "2s"
+    interval = '15s'
+    timeout = '2s'
+    grace_period = '30s'
+
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
