--- a/plausible/next_website/package.json
+++ b/plausible/next_website/package.json
@@ -13,6 +13,7 @@
     "@vercel/analytics": "^1.1.3",
     "@vercel/speed-insights": "^1.0.9",
     "geist": "1.2.2",
+    "js-cookie": "^3.0.5",
     "next": "canary",
     "next-mdx-remote": "^4.4.1",
     "next-plausible": "^3.12.1",
@@ -21,6 +22,7 @@
     "react-dom": "18.2.0",
     "sugar-high": "^0.6.0",
     "tailwindcss": "4.0.0-alpha.13",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "uuid": "^10.0.0"
   }
 }
