feat: Adding tests.

--- a/plausible/next_website/tsconfig.json
+++ b/plausible/next_website/tsconfig.json
@@ -20,6 +20,7 @@
         "name": "next"
       }
     ],
+    "types": ["vitest/globals"],
     "strictNullChecks": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
