--- a/plausible/next_website/package.json
+++ b/plausible/next_website/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev --experimental-https",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "vitest run --coverage"
   },
   "dependencies": {
     "@tailwindcss/postcss": "4.0.0-alpha.13",
@@ -23,6 +24,13 @@
     "sugar-high": "^0.6.0",
     "tailwindcss": "4.0.0-alpha.13",
     "typescript": "5.3.3",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "vitest-browser-react": "^0.0.1"
+  },
+  "devDependencies": {
+    "@testing-library/react": "^16.0.1",
+    "@vitest/coverage-istanbul": "2.1.3",
+    "jsdom": "^25.0.1",
+    "vitest": "^2.1.3"
   }
 }
