--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,7 +9,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    defaults:
+        run:
+          working-directory: ./plausible/next_website
     steps:
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v4
