--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,10 +10,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     defaults:
-        run:
-          working-directory: ./plausible/next_website
+      run:
+        working-directory: plausible/next_website
     steps:
       - uses: actions/checkout@v3
+
       - uses: pnpm/action-setup@v4
         name: Install pnpm
         with:
@@ -24,10 +25,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'pnpm'
-  
+          cache: "pnpm"
+
       - name: Install dependencies
         run: pnpm install
-    
+
       - name: Execute Unit tests
         run: pnpm run test
