--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,10 +25,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: "pnpm"
 
       - name: Install dependencies
         run: pnpm install
+        working-directory: plausible/next_website
 
       - name: Execute Unit tests
         run: pnpm run test
+        working-directory: plausible/next_website
